--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,15 +9,17 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppetMovilApp">
-        <activity android:name=".navbar.NavbarActivity"/>
-        <activity android:name=".register.RegisterActivity" />
-        <activity android:name=".login.LoginActivity"/>
-        <activity android:name=".MainActivity" >
+        <activity android:name=".navbar.NavbarActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity android:name=".register.RegisterActivity" />
+        <activity android:name=".login.LoginActivity"/>
+        <activity android:name=".MainActivity" >
+
         </activity>
 
     </application>
